foto y texto en nosotros

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -182,6 +182,21 @@ h2{
         background-color: aquamarine;
     }
 }
+.narda img{
+    
+    opacity: 5;
+   border: none;
+   width: 500px;
+   height: 400px;
+   
+}
+.narda{
+    display: flex;
+    justify-content: center;
+    
+}
+   
+    
 
 
   
