--- a/css/estilo.css
+++ b/css/estilo.css
@@ -195,6 +195,39 @@ h2{
     justify-content: center;
     
 }
+input[type=checkbox] {
+    display: none;
+}
+
+.hamburger {
+    display: none;
+    font-size: 24px;
+    user-select: none;
+}
+  @media (max-width: 600px) {
+    
+    nav{
+        text-align: right;
+    }
+    .menu {
+        display: none;
+        position: relative;
+        background-color: rgb(88, 15, 66);
+        right: 0;
+        left: 0;
+        text-align: center;
+        padding: 5px 0;
+    }
+    input[type=checkbox]:checked~.menu {
+        display: block;
+        
+    }
+    .hamburger {
+        display: block;
+        padding-right: 5px;
+        
+    }
+}
    
     
 
