--- a/css/estilo.css
+++ b/css/estilo.css
@@ -119,6 +119,7 @@ h2{
     display:flex;
    flex-direction: row;
     justify-content: center;
+    font-size: 50px;
     
 }
 .sociales li{
@@ -131,13 +132,8 @@ h2{
    padding: 10px;
      
 }
-.sociales li a fa{
-    opacity: 5;
-    border: none;
-    width: 60px;
-    height: 60px;
-    
-}
+
+
 .sub{
     text-align: center;
     margin-bottom: 10px;
