--- a/css/estilo.css
+++ b/css/estilo.css
@@ -119,7 +119,7 @@ h2{
     display:flex;
    flex-direction: row;
     justify-content: center;
-    font-size: 50px;
+    font-size: 40pt;
     
 }
 .sociales li{
